tests/error/fptr_other_class.gw
#! [contains] can't use non global fptr of other class
class C {
  typedef void t_ptr();
}
class D {
  typedef void t_ptr();
  var C.t_ptr ptr;
}
